<resources>
    <string name="app_name">TestFinder</string>
    <string name="title_activity_maps">Map</string>
    <string name="ZipCodeTitle">Find COVID testing sites near you</string>
    <string name="ZipHint">Enter Zipcode</string>
    <string name="Search">Search</string>
    <string name="useCurrLocationBtn">use your current location</string>
    <string name="currLocationTxt">or click to</string>
    <string name="nearSites">Click site to see more</string>
    <string name="gif">Location gif</string>
    <string name="sign">Powered by Queue-ties</string>
    <string name="site">Site</string>
    <string name="reviews">Reviews</string>
    <string name="map_instructions">Enter a weather event and date range to see nearby events of the specified type on a map. You may type in a zip code or use your current location. Events will be shown within 20 miles of your selected location.</string>
</resources>
